build: fix build error