@@ -14,6 +14,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs '--enable-preview'
 }
 
 tasks.withType(JavaCompile).each {
